# orchestraplatform

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  justfile  package-lock.json  package.json  wrangler.jsonc
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: config.yml  workshop-template.yml
.github/workflows/: ci.yml  deploy.yml  template-submission-convert.yml  template-submission-validate.yml  validate-templates.yml
deploy/: gcp-values-standard.yaml  gcp-values.yaml  values-dev.yaml
deploy/charts/orchestra/: Chart.yaml  values-prod.yaml  values.yaml
deploy/charts/orchestra-crds/: Chart.yaml
deploy/templates/: jupyter.yaml  rstudio.yaml
deploy/tofu/: README.md
docs/: .eslintrc.cjs  .gitignore  README.md  astro.config.mjs  justfile  package-lock.json  package.json  pnpm-lock.yaml  wrangler.jsonc
docs/public/: _redirects
docs/src/components/: Head.astro  ThemeProvider.astro
docs/src/pages/: index.astro
docs/src/styles/: custom.css
frontend/: .copilot-instructions.md  .env.local.example  .eslintrc.cjs  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  index.html  justfile  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  inert.d.ts  vite-env.d.ts
frontend/src/contexts/: TickContext.tsx
frontend/src/hooks/: useAuthConfig.ts  useCurrentUser.ts  useExpiryNotifications.ts  useInstances.ts  useMediaQuery.ts  useTemplates.ts  useTick.ts  useWorkshops.ts
frontend/src/pages/: AdminDashboard.tsx  AdminTemplates.tsx  CreateWorkshop.tsx  Dashboard.tsx  History.tsx  LaunchTemplate.tsx  LaunchWorkshop.tsx  Templates.tsx  WorkshopDetail.tsx
frontend/src/services/: api.ts  apiGenerated.ts  workshops.ts
frontend/src/types/: workshop.ts
frontend/src/utils/: analytics.test.ts  analytics.ts  envArgs.test.ts  envArgs.ts  (+1 more)
images/: README.md
images/bioconductor-devel/: Dockerfile
images/jupyterlab/: Dockerfile  jupyter_server_config.py
operator/: Dockerfile  README.md  justfile  pyproject.toml
operator/examples/: workshop-example.yaml
operator/src/: cluster.py  config.py  crd.py  main.py
operator/src/handlers/: cleanup.py  workshop.py
operator/src/resources/: deployment.py  desired.py  ingress.py  middleware.py  naming.py  pvc.py  service.py
operator/src/utils/: phases.py  time_utils.py
operator/tests/: fakes.py  test_cluster.py  test_crd_contract.py  test_deployment.py  test_desired.py  test_ingress.py  test_phases_contract.py  test_time_utils.py  test_workshop_handler.py
scripts/: doctor.sh
server/: .copilot-instructions.md  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  debug_db.py  debug_template.py  generate_schema.py  generate_template_schema.py  justfile  main.py  pyproject.toml  serve_schema.py  server_logs.txt
server/alembic/: env.py
server/alembic/versions/: a1b2c3d4e5f6_add_tags_to_workshops.py  a7b8c9d0e1f2_drop_workshops_table.py  b2c3d4e5f6a7_add_port_to_workshops.py  c3d4e5f6a7b8_add_env_args_to_workshops.py  d4e5f6a7b8c9_stamp_template_spec_on_instances.py  e5f6a7b8c9d0_add_tier_to_workshops.py  f6a7b8c9d0e1_drop_workshop_instance_fk.py  ff88c095ce42_create_workshops_and_instances_tables.py
server/api/core/: __init__.py  auth.py  config.py  database.py  kubernetes.py
server/api/models/: workshop.py
server/api/models/db/: __init__.py  workshop.py  workshop_instance.py
server/api/models/schemas/: workshop_instance.py  workshop_template.py
server/api/routes/: __init__.py  auth.py  health.py  instances.py  templates.py  workshops.py
server/api/services/: template_registry.py  workshop_cluster.py  workshop_instance_service.py  workshop_service.py  workshop_template_service.py
server/tests/: conftest.py  fakes.py  test_auth.py  test_crd_contract.py  test_health.py  test_orm_mapper_guard.py  test_template_files.py  test_template_registry.py  test_templates.py  test_workshop_instance_service.py  test_workshops.py  test_workshops_authz.py
server/tests/integration/: conftest.py  test_workshop_lifecycle.py
sidecar/: Dockerfile  go.mod
sidecar/src/: main.go
src/hooks/: useWorkshops.ts
src/types/: workshop.ts
template-tools/: README.md  pyproject.toml
template-tools/src/orchestra_template_tools/: __init__.py  cli.py  crd.py  forms.py  models.py  presets.py  render.py  schema.py  validate.py
template-tools/tests/: test_forms.py  test_presets.py  test_render.py  test_validate.py
(+98 files in other folders)
