[project]
name = "orchestra-operator"
version = "0.1.0"
description = "Kubernetes operator for managing RStudio workshop instances"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kopf>=1.38.0",
    "kubernetes>=29.0.0",
    "kubernetes-asyncio>=29.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "python-dateutil>=2.8.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"
[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "B", "UP", "N", "PL"]
ignore = [
    "E501",    # line length
    "B008",    # function call in argument defaults
    "PLR2004", # magic value
    "C901",    # too complex
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "B904",    # raise from
    "PLC0415", # top-level import
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
check_untyped_defs = true
explicit_package_bases = true
