[project]
name = "orchestra-api"
version = "0.1.0"
description = "REST API for managing RStudio workshops via Orchestra Operator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.0.0",
    "kubernetes>=29.0.0",
    "python-dateutil>=2.8.0",
    "python-multipart>=0.0.6",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.25.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "B", "UP", "N", "PL"]
ignore = [
    "E501",    # line length (handled by formatter)
    "B008",    # function call in argument defaults (needed for FastAPI Depends)
    "PLR2004", # magic value in comparison (common in tests/status codes)
    "C901",    # function too complex
    "B904",    # raise from (not strictly needed for all HTTPExceptions)
    "N802",    # function name should be lowercase (overridden for Field)
    "PLC0415", # import should be at top-level (sometimes needed for circular imports)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
check_untyped_defs = true
explicit_package_bases = true
