[project]
name = "orchestra-template-tools"
version = "0.1.0"
description = "Schema, validation, and CLI for Orchestra workshop-template YAML files (ADR-0007)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
]

[project.scripts]
orchestra-validate-templates = "orchestra_template_tools.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestra_template_tools"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]
